- Fixed contrast on SOHO-6402 - Added all contents to Change log

--- a/sass/high-contrast-theme.scss
+++ b/sass/high-contrast-theme.scss
@@ -615,9 +615,8 @@ $wizard-active-color: $primary-color;
 $wizard-active-text-color: $primary-color;
 $wizard-focus-box-shadow: 0 0 0 1px $azure07;
 
-
-//Themable Variables in config.scss
-$hierarchy-line-color: $graphite03;
+//Org Chart
+$hierarchy-line-color: $graphite10;
 
 // Searchfield Colors
 $searchfield-bg-color: $white;
